variables.Variables.scala.error
Erreur de compilation :
Variables:1: error: not found: type int
var nbpas: int = 0
           ^Variables:9: error: not found: type int
var dejafait:int =0
             ^